[build-system]
requires = ["flit_core >=3.9,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "openstack_charms_cert_validator"
dependencies = [
    "certvalidator==0.11"
]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "coverage"
]

[project.scripts]
openstack-charms-cert-validator = "openstack_charms_cert_validator:main"
